{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 371,
  "lineage": "84f24f93-ca3a-e871-5516-f29c66ac4ef9",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6f33d85910d0524",
            "domain": "vpc",
            "id": "eipalloc-0e6f33d85910d0524",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-18-228-159-98.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.228.159.98",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc_eks-sa-east-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-sa-east-1a",
              "terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e086f9bea3aaf03",
            "domain": "vpc",
            "id": "eipalloc-00e086f9bea3aaf03",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-54-207-29-112.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.207.29.112",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc_eks-sa-east-1c",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-sa-east-1c",
              "terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:internet-gateway/igw-02a2730de16ccac71",
            "id": "igw-02a2730de16ccac71",
            "owner_id": "662072000689",
            "tags": {
              "Name": "vpc_eks",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c93a2c7211607c96"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6f33d85910d0524",
            "connectivity_type": "public",
            "id": "nat-0a29cfc63ae29f428",
            "network_interface_id": "eni-0fff7b388932cc981",
            "private_ip": "10.0.1.77",
            "public_ip": "18.228.159.98",
            "subnet_id": "subnet-0ae18f96945a7e21e",
            "tags": {
              "Name": "vpc_eks-sa-east-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-sa-east-1a",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e086f9bea3aaf03",
            "connectivity_type": "public",
            "id": "nat-0f98acd00d7c90a76",
            "network_interface_id": "eni-0169c7bbc06b1cc56",
            "private_ip": "10.0.2.124",
            "public_ip": "54.207.29.112",
            "subnet_id": "subnet-0684cd2dbe4fb7b79",
            "tags": {
              "Name": "vpc_eks-sa-east-1c",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-sa-east-1c",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c82a20ee9c8d96541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a29cfc63ae29f428",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c82a20ee9c8d9654",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fe81cc7fc7a490791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f98acd00d7c90a76",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe81cc7fc7a49079",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02a2730de16ccac71",
            "id": "r-rtb-057f4bb81fd72004e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-057f4bb81fd72004e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:route-table/rtb-0c82a20ee9c8d9654",
            "id": "rtb-0c82a20ee9c8d9654",
            "owner_id": "662072000689",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc_eks-private-sa-east-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-private-sa-east-1a",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c93a2c7211607c96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:route-table/rtb-0fe81cc7fc7a49079",
            "id": "rtb-0fe81cc7fc7a49079",
            "owner_id": "662072000689",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc_eks-private-sa-east-1c",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-private-sa-east-1c",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c93a2c7211607c96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:route-table/rtb-057f4bb81fd72004e",
            "id": "rtb-057f4bb81fd72004e",
            "owner_id": "662072000689",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc_eks-public",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-public",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c93a2c7211607c96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0447a6ec93a62a1b7",
            "route_table_id": "rtb-0c82a20ee9c8d9654",
            "subnet_id": "subnet-0528d43c9baf8cc33"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031e94e8af41c20fc",
            "route_table_id": "rtb-0fe81cc7fc7a49079",
            "subnet_id": "subnet-028a9854344d53266"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d82d7e2c682b32e",
            "route_table_id": "rtb-057f4bb81fd72004e",
            "subnet_id": "subnet-0ae18f96945a7e21e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093ed099fe2f00c10",
            "route_table_id": "rtb-057f4bb81fd72004e",
            "subnet_id": "subnet-0684cd2dbe4fb7b79"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:subnet/subnet-0528d43c9baf8cc33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0528d43c9baf8cc33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662072000689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_eks-private-sa-east-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-private-sa-east-1a",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c93a2c7211607c96"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:subnet/subnet-028a9854344d53266",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028a9854344d53266",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662072000689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_eks-private-sa-east-1c",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-private-sa-east-1c",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c93a2c7211607c96"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:subnet/subnet-0ae18f96945a7e21e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae18f96945a7e21e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "662072000689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_eks-public-sa-east-1a",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-public-sa-east-1a",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c93a2c7211607c96"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:subnet/subnet-0684cd2dbe4fb7b79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0684cd2dbe4fb7b79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "662072000689",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc_eks-public-sa-east-1c",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks-public-sa-east-1c",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c93a2c7211607c96"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:662072000689:vpc/vpc-0c93a2c7211607c96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037df2e4eb8f849ea",
            "default_route_table_id": "rtb-0874d949470f78e3e",
            "default_security_group_id": "sg-08d447c10fbf5265e",
            "dhcp_options_id": "dopt-66411801",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c93a2c7211607c96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0874d949470f78e3e",
            "owner_id": "662072000689",
            "tags": {
              "Name": "vpc_eks",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "vpc_eks",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}